# class8agent

./: README.md  pyproject.toml
.history/: README_20250202110201.md  README_20250202110202.md  README_20250202110204.md  README_20250202132429.md  README_20250202132437.md  README_20250202132445.md  README_20250202133202.md  README_20250202133203.md  README_20250202133209.md  README_20250202133211.md  README_20250202133214.md  README_20250202133216.md  README_20250202133218.md  README_20250202133221.md  README_20250202133223.md  README_20250202133231.md  README_20250202133237.md  README_20250202133240.md  README_20250202133243.md  README_20250202133244.md  hello_20250202094519.py  hello_20250202094528.py  hello_20250202094543.py  hello_20250202094545.py  hello_20250202094548.py  hello_20250202110217.py  hello_20250202110221.py  hello_20250202110224.py  hello_20250202110336.py  hello_20250202110344.py  hello_20250202110431.py  hello_20250202110452.py  hello_20250202110518.py  hello_20250202110523.py  hello_20250202110526.py  hello_20250202110529.py  hello_20250202110536.py  hello_20250202110539.py  hello_20250202110541.py  hello_20250202110546.py  (+195 more)
.history/promotpractice/: hello_20250202120058.py  hello_20250202121829.py
promotpractice/: prompt.py  pyproject.toml
