[project]
name = "class8-crewai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.8",
    "langchain>=0.3.17",
    "langchain-google-genai>=2.0.9",
    "streamlit>=1.41.1",
    "uvicorn>=0.34.0",
    "wsgi-cors-middleware>=0.0.2",
]
